--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-scroll": "^1.8.3",
+    "@types/uuid": "^8.3.4",
+    "daisyui": "^2.19.0",
+    "framer-motion": "^6.5.1",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-mighty-mouse": "1.3.45",
+    "react-modern-drawer": "^1.1.1",
+    "react-scroll": "^1.8.7",
+    "react-scroll-parallax": "^3.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "18.0.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
+    "postcss": "^8.4.14",
+    "tailwind-styled-components": "^2.1.8",
+    "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
 }
