--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react-scroll": "^1.8.3",
+    "@types/simple-icons": "5.8.0",
     "@types/uuid": "^8.3.4",
     "daisyui": "^2.19.0",
     "framer-motion": "^6.5.1",
@@ -17,10 +18,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-mighty-mouse": "1.3.45",
+    "react-icon-cloud": "3.0.3",
     "react-modern-drawer": "^1.1.1",
     "react-scroll": "^1.8.7",
     "react-scroll-parallax": "^3.2.0",
-    "uuid": "^8.3.2"
+    "react-tabs": "^5.1.0",
+    "simple-icons": "5.12.0",
+    "tw-elements": "^1.0.0-alpha12",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "18.0.4",
