--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@
 /.pnp
 .pnp.js
 
+# yarn
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+
 # testing
 /coverage
 
